Resolved issues with title on landing page on IE8

--- a/source/stylesheets/home.header.scss
+++ b/source/stylesheets/home.header.scss
@@ -8,6 +8,7 @@
   margin: -40px 0 0 -507px;
   width: 1015px;
   height: 80px !important;
+  float: left;
   h1 {
     top: 0;
     display: block;
@@ -16,6 +17,7 @@
     width: 1015px;
     height: 80px;
     height: 80px;
+    float: left;
   }
 }
 
@@ -34,7 +36,7 @@
   font-size: 0;
 }
 /* First Character (K) */
-#header h1 > *:nth-child(1) {
+#header h1 > *.nth-child-1 {
   margin: 0 0 0 7px;
   width: 75px;
   background-position: -350px 0px;
@@ -48,7 +50,7 @@
           animation: letter1 15s ease-out;
 }
 /* Second Character (E) */
-#header h1 > *:nth-child(2) {
+#header h1 > *.nth-child-2 {
   margin: 0 7px;
   width: 64px;
   background-position: -216px 0px;
@@ -62,7 +64,7 @@
           animation: letter2 15s ease-out;
 }
 /* Third Character (N) */
-#header h1 > *:nth-child(3) {
+#header h1 > *.nth-child-3 {
   margin: 0 7px;
   width: 79px;
   background-position: -426px 0px;
@@ -76,7 +78,7 @@
           animation: letter3 15s ease-out;
 }
 /* Fourth Character (T) */
-#header h1 > *:nth-child(4) {
+#header h1 > *.nth-child-4 {
   margin: 0 4px;
   width: 68px ;
   background-position: -281px 0px;
@@ -90,7 +92,7 @@
           animation: letter4 15s ease-out;
 }
 /* Fifth Character (Ampersand) */
-#header h1 > *:nth-child(5) {
+#header h1 > *.nth-child-5 {
   margin: 0 40px 0 44px;
   width: 72px;
   background-position: -76px 0px;
@@ -104,7 +106,7 @@
           animation: letter5 15s ease-out;
 }
 /* Sixth Character (C) */
-#header h1 > *:nth-child(6) {
+#header h1 > *.nth-child-6 {
   margin: 0 5px 0 6px;
   width: 66px;
   background-position: -149px 0px;
@@ -118,7 +120,7 @@
           animation: letter6 15s ease-out;
 }
 /* Seventh Character (U) */
-#header h1 > *:nth-child(7) {
+#header h1 > *.nth-child-7 {
   margin: 0 7px;
   width: 79px;
   background-position: -582px 0px;
@@ -132,7 +134,7 @@
           animation: letter7 15s ease-out;
 }
 /* Eighth Character (R) */
-#header h1 > *:nth-child(8) {
+#header h1 > *.nth-child-8 {
   margin: 0 0 0 4px;
   width: 75px ;
   background-position: -506px 0px;
@@ -146,7 +148,7 @@
           animation: letter8 15s ease-out;
 }
 /* Ninth Character (W) */
-#header h1 > *:nth-child(9) {
+#header h1 > *.nth-child-9 {
   margin: 0;
   width: 110px;
   background-position: -662px 0px;
@@ -160,7 +162,7 @@
           animation: letter9 15s ease-out;
 }
 /* Tenth Character (E) */
-#header h1 > *:nth-child(10) {
+#header h1 > *.nth-child-10 {
   margin: 0 7px;
   width: 64px;
   background-position: -216px 0px;
@@ -174,7 +176,7 @@
           animation: letter10 15s ease-out;
 }
 /* Eleventh Character (N) */
-#header h1 > *:nth-child(11) {
+#header h1 > *.nth-child-11 {
   margin: 0 7px;
   width: 79px;
   background-position: -426px 0px;
