--- a/source/stylesheets/home.scss
+++ b/source/stylesheets/home.scss
@@ -15,12 +15,13 @@ body.cover {
       left: 0;
       position: absolute;
       top: 0;
-      opacity: 0;
-      filter: alpha(opacity = 0);
+      display: none;
+      // opacity: 0;
+      // filter: alpha(opacity = 0);
     }
     img.active {
-      opacity: 1;
-      filter: alpha(opacity = 100);
+      // opacity: 1;
+      // filter: alpha(opacity = 100);
     }
   }
 }
@@ -37,14 +38,14 @@ body.cover.ready {
   }
 
   .cover img {
-    -webkit-transition-duration: 3.75s;
-       -moz-transition-duration: 3.75s;
-         -o-transition-duration: 3.75s;
-            transition-duration: 3.75s;
-    -webkit-transition-property: opacity;
-       -moz-transition-property: opacity;
-         -o-transition-property: opacity;
-            transition-property: opacity;
+    // -webkit-transition-duration: 3.75s;
+       // -moz-transition-duration: 3.75s;
+         // -o-transition-duration: 3.75s;
+            // transition-duration: 3.75s;
+    // -webkit-transition-property: opacity;
+       // -moz-transition-property: opacity;
+         // -o-transition-property: opacity;
+            // transition-property: opacity;
   }
 }
 
